# comp-bot

./: Dockerfile  bandcamp.py  conftest.py  fly.toml  main.py  pyproject.toml  responses.py  songs.py  voice.py  youtube_source.py
tests/: bandcamp_test.py  songs_test.py
tests/cassettes/: perform_with_album_link.yaml  perform_with_nonexistent_album_link.yaml
